--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,18 +1,18 @@
 <div class="row">
 	<div class="col-xs-12">
-		<h1>Awesome-o-Tron</h1>
-		
-		<a href="/#/playlist/edit/newplaylist">New playlist</a>
+		<h1>YouTube Playlists</h1>
+		<p class="lead text-muted">Without the madness.</p>
 	</div>
-
 </div>
 <div class="row">
 	<div class="col-xs-12">
-		<h3>Today's playlists...</h3>
-		<ul>
-			<li ng-repeat="playlist in playlists | orderBy: '-lastUpdated'">
-				<a ng-click="play(playlist._id)" href="">{{playlist.name}}</a> [{{playlist.author}}] - {{playlist.lastUpdated | date: 'fullDate'}}
-			</li>
-		</ul>
+		<h3>Watch a Playlist</h3>
+		<div class="list-group">
+			<a ng-click="play(playlist._id)" href="" class="list-group-item" ng-repeat="playlist in playlists | orderBy: '-lastUpdated'">
+				<span class="badge">{{playlist.video.length}}</span>
+				<h4 class="list-group-item-heading">{{playlist.name}}</h4>
+				<p class="list-group-item-text">By {{playlist.author}} - {{playlist.lastUpdated | date: 'fullDate'}}</p>
+			</a>
+		</div>
 	</div>
 </div>
