--- a/server/views/index.html
+++ b/server/views/index.html
@@ -21,12 +21,49 @@
         <meta name="theme-color" content="#ffffff">
 
         <title><%= title %></title>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/darkly/bootstrap.min.css" />
+
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.2/css/bootstrap-glyphicons.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.9/toaster.min.css" />
         <link rel="stylesheet" href="/styles/site.css" />
     </head>
     <body>
-        <div class="container-fluid" ng-view></div>
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                  <a href="/" class="navbar-brand">Awesome-O-Tron</a>
+                </div>
+                <div class="navbar-collapse collapse" id="navbar-main">
+                  <ul class="nav navbar-nav">
+                    <li>
+                      <a href="#/playlist/edit/newplaylist">New Playlist</a>
+                    </li>
+                    <li>
+                      <a href="http://rkilkenny.tumblr.com">Blog</a>
+                    </li>
+                  </ul>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li></li>
+                  </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container under-nav-fix">
+            <div ng-view></div>
+
+            <footer>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <ul class="list-unstyled">
+                      <li class="pull-right"><a href="#top">Back to top</a></li>
+                      <li><a href="https://twitter.com/gelletto1138">Twitter</a></li>
+                      <li><a href="https://github.com/ilmaestro/awesomeotron/">GitHub</a></li>
+                    </ul>
+                    <p>Made by <a href="http://rkilkenny.tumblr.com" rel="nofollow">Ryan Kilkenny</a>.
+                  </div>
+                </div>
+            </footer>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-route.min.js"></script>
