--- a/server/views/index.html
+++ b/server/views/index.html
@@ -23,7 +23,7 @@
         <title><%= title %></title>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/darkly/bootstrap.min.css" />
 
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.2/css/bootstrap-glyphicons.css" />
+        <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.2/css/bootstrap-glyphicons.css" /> -->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/0.4.9/toaster.min.css" />
         <link rel="stylesheet" href="/styles/site.css" />
     </head>
